syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GameServiceProtos";

message GameComment{
  int32 id = 1;
  int32 game_id = 2;
  google.protobuf.Int32Value parent_id = 3;
  string ip = 4;
  string content = 5;
  bool deleted = 6;
  bool edited = 7;
  google.protobuf.Timestamp CreatedAt = 8;
  google.protobuf.Timestamp UpdatedAt = 9;


}
